--- a/app/src/main/res/layout/activity_guesture.xml
+++ b/app/src/main/res/layout/activity_guesture.xml
@@ -18,4 +18,14 @@
         android:layout_alignParentRight="true"
         android:text="发送" />
 
+    <ImageView
+        android:id="@+id/iv_canvas"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <ImageView
+        android:id="@+id/iv_move"
+        android:layout_width="10dp"
+        android:layout_height="10dp" />
+
 </RelativeLayout>
