--- a/app/src/main/res/layout/activity_guesture.xml
+++ b/app/src/main/res/layout/activity_guesture.xml
@@ -4,28 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.daniulive.smartplayer.GuestureActivity">
 
-    <Button
-        android:id="@+id/buttonSend1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:text="发送" />
 
     <ImageView
-        android:id="@+id/iv_canvas"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <ImageView
-        android:id="@+id/iv_move"
-        android:layout_width="10dp"
-        android:layout_height="10dp" />
+        android:id="@+id/cat_icon"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="@drawable/caticon"
+        android:layout_marginLeft="143dp"
+        android:layout_marginTop="79dp"
+        />
 
 </RelativeLayout>
